--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-    <meta charset="UTF = -8">
-    <title>Odin recipes</title>
-   </head>
-   <body>
-    <h1>Odin recipes</h1>
-   </body>
+    <head>
+        <meta charset="UTF -8">
+        <title>Food recipes</title>
+    </head>
+    <body>
+        <h1>Odin Recipes</h1>
+        <a  href="cookies.html">CHOCOLATE CHIP COOKIE</a>
+    </body>
 </html>
