Linked_home_page_and_cookie_page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a  href="cookies.html">CHOCOLATE CHIP COOKIE</a>
+        <a href="cookie.html">CHOCOLATE CHIP COOKIE</a>
     </body>
 </html>
