Created kotthu page and likned to index page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="cookie.html">CHOCOLATE CHIP COOKIE</a>
+        <ul>
+            <li><a href="cookie.html">CHOCOLATE CHIP COOKIE</a></li>
+            <li><a href="kotthu.html">STREET FOOD KOTTHU</a></li>
+        </ul>
     </body>
 </html>
